basic backend functions

--- a/flask-backend/templates/ongoing_projects.html
+++ b/flask-backend/templates/ongoing_projects.html
@@ -1,6 +1,6 @@
 <h2>Ongoing Projects</h2>
 <ul>
-    {% for project in ongoing_projects %}
+    {% for project in projects %}
         <li>{{ project }}</li>
     {% endfor %}
 </ul>
