--- a/flask-backend/templates/index.html
+++ b/flask-backend/templates/index.html
@@ -4,4 +4,8 @@
     {% include "ongoing_projects.html" %}
     {% include "tasks.html" %}
     {% include "myprogress.html" %}
+    <h2>Calendar for October 2024</h2>
+    <div class="calendar-container">
+        {{ calendar|safe }}
+    </div>
 {% endblock %}
