--- a/flask-backend/templates/myprogress.html
+++ b/flask-backend/templates/myprogress.html
@@ -1,6 +1,10 @@
 <h2>My Progress</h2>
 <ul>
     {% for progress in myprogress %}
-        <li>{{ progress[0] }} - {{ (progress[1] / progress[2]) * 100 }}%</li>
+        {% if progress.total != 0 %}
+        <li>{{ progress.language }} - {{ ((progress.completed / progress.total) * 100) | round | int }}%</li>
+        {% else %}
+            <li>{{ progress.language }} - No progress available</li>
+        {% endif %}
     {% endfor %}
 </ul>
