Basic task management

--- a/flask-backend/app/templates/projects.html
+++ b/flask-backend/app/templates/projects.html
@@ -1,7 +1,2 @@
-<h2>Ongoing Projects</h2>
-<p>You have {{ count }} project(s)</p>
-<!-- <ul>
-    {% for project in projects %}
-        <li>{{ project }}</li>
-    {% endfor %}
-</ul> -->
+<h2>Ongoing Projects here</h2>
+
