--- a/flask-backend/app/templates/task.html
+++ b/flask-backend/app/templates/task.html
@@ -1,1 +1,47 @@
-<h1>Task html</h1>
+<div class="content">
+    <div class="content">
+        <a href="/add_task/" class="button">Add Task</a>
+    </div>
+</form>
+{% if tasks|length < 1 %}
+<h3>Task list empty!</h3>
+{% else %} 
+<table>
+    <tr>
+        <th>Task</th>
+        <th>Added</th>
+        <th>Actions</th>
+        <th>status</th>
+        <th>Dateline</th>
+        <th>Duration</th>
+    </tr>
+
+    {% for task in tasks %}
+    {% if not task.completed %}
+        <tr>
+            <td>{{ task.id }}</td>
+            <td>{{task.content}}</td>
+            <td>
+                <form action="/complete_task/" method="POST">
+                    <input type="checkbox" name="task_complete" value="1" onchange="this.form.submit()" id="taskCheckbox" aria-label="status">
+                    <input type="hidden" name="task_id" value="{{ task.id }}">
+                </form>
+            </td>
+            <td>
+                <a href="/delete/{{task.id}}">Delete</a>
+                <br>
+                <a href="/update/{{task.id}}">Update</a>
+            </td>
+            <td>
+                {{ task.date }}
+            </td>
+            <td>4</td>
+        </tr>
+        {% endif %}
+    {% endfor %}
+
+</table>
+{% endif %}
+
+</div>
+
