--- a/flask-backend/app/templates/add_task.html
+++ b/flask-backend/app/templates/add_task.html
@@ -1,3 +1,8 @@
 <form action="/add_task/" method="POST">
-    <input type="text" name="content" id="content" aria-label="content">
-    <input type="submit" value="Add task">
+    <input type="text" name="content" id="content" aria-label="content" placeholder="#Task name">
+    <input type="text" name="message" id="message" aria-label="priority" placeholder="Priority">
+    <input type="text" name="deadline" id="deadline" aria-label="Deadline" placeholder="#Deadline">
+    <input type="text" name="duration" id="duration" aria-label="#Probable duration" placeholder="#Probable duration">
+    <input type="submit" value="Add task" >
+    
+</form>
