--- a/flask-backend/app/templates/index.html
+++ b/flask-backend/app/templates/index.html
@@ -1,7 +1,10 @@
 {% extends "base.html" %}
 {% block body %}
-    {% include "task.html"%}
+    {% include "ongoing_projects/projects.html"%}
+    {% include "affirmations.html" %}
+    {% include "task_manager/task.html"%}
+    {% include "progress_management/progress.html"%}
     {% include "calendar.html"%}
-    {% include "progress.html"%}
-    {% include "projects.html"%}
+    
+    
 {% endblock %}
