--- a/flask-backend/app/templates/ongoing_projects/projects.html
+++ b/flask-backend/app/templates/ongoing_projects/projects.html
@@ -4,6 +4,8 @@
    <li><a href="/project/{{ project.id }}">{{ project.name }}</a></li>
    {% endfor %}
 </ul>
+<a href="/add_project/">Add Project</a>
 
+<a href="/update_project/{{ project.id }}">Update Project</a>
 
 
