--- a/flask-backend/app/templates/task_manager/task.html
+++ b/flask-backend/app/templates/task_manager/task.html
@@ -21,7 +21,7 @@
     {% if not task.completed %}
         <tr>
             <td>{{ task.id }}</td>
-            <td><a href="/todo/{{ task.id }}">{{task.name}}</a></td>
+            <td><a href="/display_task/{{ task.id }}">{{task.name}}</a></td>
             <td>{{ task.date_created }}</td>
 
             <td>
