--- a/flask-backend/app/templates/index.html
+++ b/flask-backend/app/templates/index.html
@@ -1,9 +1,9 @@
 {% extends "base.html" %}
 {% block body %}
     {% include "ongoing_projects/projects.html"%}
-    {% include "affirmations.html" %}
+    {% include "affirmations_page.html" %}
     {% include "task_manager/task.html"%}
    
-    
-    
+<button><a href="/add_affirmation/">add affirmation</a></button>
+<button><a href="/add_tech/">add technology</a></button> 
 {% endblock %}
