--- a/flask-backend/app/templates/ongoing_projects/projectpage.html
+++ b/flask-backend/app/templates/ongoing_projects/projectpage.html
@@ -1,19 +1,18 @@
-<h1>{{ all_projects.name }}</h1>
+<h1>{{ project.name }}</h1>
 <p>{{ project.description }}</p>
 
 <div class="section1">
    <ul>
     <h4>Features</h4>
-    <li>Thank you very much</li>
-    <li>edit tasks to add specs</li>
-    <li>Change tasks descriptions</li>
-    <li>Delete tasks here</li>
+    {% for task in project.tasks %}
+    <li>{{ task }}</li>
+    {% endfor %}
     </ul>
 
     
     <ul>
         <h4>Technologies</h4>
-        {% for tech in project.technologies %}
+        {% for tech in project.technologies_used() %}
         <li>{{ tech.name }}</li>
         {% endfor %}
     </ul> 
@@ -22,8 +21,10 @@
     
     <ul>
         <h4>Milestones</h4>
-        {% for milestone in project.milestones %}
-        <li>{{ milestone.description }}</li>
+        {% for task in project.tasks %}
+        {% if task.is_milestone %}
+        <li>{{ task }}</li>
+        {% endif %}
         {% endfor %}
     </ul>
 
