--- a/flask-backend/app/templates/ongoing_projects/add_project.html
+++ b/flask-backend/app/templates/ongoing_projects/add_project.html
@@ -1,5 +1,5 @@
 <form action="/add_project/" method="POST">
-    <input type="text" name="name" id="name" aria-label="name" placeholder="Project name*">
+    <input type="text" name="name" id="name" aria-label="name" placeholder="Project name*" required>
     
     <input type="text" name="description" id="description" aria-label="Task description" placeholder="Project Description">
 
