--- a/angular-frontend/src/app/app.component.html
+++ b/angular-frontend/src/app/app.component.html
@@ -1,1 +1,20 @@
-<p>Wibuddy is coming up</p>
+<h1 style=text-align:center>Wibuddy</h1>
+<div class="home-container">
+  <div class="right-section">
+    <app-projects-section></app-projects-section>
+  </div>
+    
+  <div class="left-section">
+      <div class="top-section">
+        <app-affirmations-section></app-affirmations-section>
+      </div>
+        <div class="middle-section">
+          <app-tasks-section></app-tasks-section>
+          <app-progress-section></app-progress-section>
+        </div>
+      <div class="bottom-section">
+        <app-calendar-section></app-calendar-section>
+      </div>
+  </div>
+  </div>
+
