--- a/angular-frontend/src/app/calendars-page/calendars-page.component.html
+++ b/angular-frontend/src/app/calendars-page/calendars-page.component.html
@@ -63,7 +63,7 @@
                 class="event-item"
                 [style.background-color]="event.color + '22'"
                 [style.border-left-color]="event.color">
-                {{event.title}}
+                {{event.name}}
               </div>
               <div class="more-events" *ngIf="getEventsForDate(date).length > 3">
                 +{{getEventsForDate(date).length - 3}} more
@@ -103,7 +103,7 @@
                 [style.background-color]="event.color + '22'"
                 [style.border-left-color]="event.color">
                 <div class="event-time">{{event.date | date:'h:mm a'}}</div>
-                <div class="event-title">{{event.title}}</div>
+                <div class="event-title">{{event.name}}</div>
               </div>
             </div>
           </div>
@@ -122,7 +122,7 @@
             <div class="task-indicator" [style.background-color]="task.color"></div>
             <div class="task-content">
               <div class="task-date">{{task.date | date:'EEE, MMM d'}}</div>
-              <div class="task-title">{{task.title}}</div>
+              <div class="task-title">{{task.name}}</div>
             </div>
           </li>
           <li class="empty-state" *ngIf="upcomingTasks.length === 0">
@@ -139,7 +139,7 @@
             class="project-item">
             <div class="project-info">
               <h4 class="project-name">{{project.name}}</h4>
-              <div class="project-deadline">Due: {{project.deadline | date:'MMM d, yyyy'}}</div>
+              <div class="project-deadline">Due: {{project.dueDate | date:'MMM d, yyyy'}}</div>
             </div>
             <div class="progress-container">
               <div class="progress-bar">
