--- a/angular-frontend/src/app/main-page/notes/notes.component.html
+++ b/angular-frontend/src/app/main-page/notes/notes.component.html
@@ -2,8 +2,8 @@
     <h3>Notes</h3>
     <ul>
       <li *ngFor="let note of notes">
-        <div class="notes-title">
-          <p>{{ note.title }}</p>
+        <div class="notes-name">
+          <p>{{ note.name }}</p>
           <p>{{ getFormattedDate(note.date) }}</p>
         </div>
         <p class="truncated">{{ getTruncatedText(note.content) }}</p>
