--- a/angular-frontend/src/app/projects-page/projects-page.component.css
+++ b/angular-frontend/src/app/projects-page/projects-page.component.css
@@ -144,3 +144,12 @@
     font-size: 14px;
     color: #666;
   }
+
+  .clickable-field {
+    cursor: pointer;
+    transition: filter 0.3s ease;
+  }
+  
+  .clickable-field:hover {
+    filter: brightness(85%) contrast(110%);
+  }
