--- a/angular-frontend/src/app/home-page/home-page.component.html
+++ b/angular-frontend/src/app/home-page/home-page.component.html
@@ -115,13 +115,13 @@
     <div class="notes">
       <div class="sect3-title">
         <h3>Notes</h3>
-        <img src="icons8-plus sign.png" (click)="navigateToNewNote()">
+        <img src="icons8-plus%20sign.png" (click)="navigateToNewNote()" alt="Add Note">
       </div>
       <div class="note-list">
         <div *ngFor="let note of notes; let i = index" class="notes clickable-field" (click)="navigateToNote(note.id)">
           <div class="note-header">
             <span class="note-title">{{ note.name }}</span>
-            <span class="note-date">{{ note.date }}</span>
+            <span class="note-date">{{ note.dateCreated | date: 'medium' }}</span>
           </div>
           <div class="note-preview" >
             {{ note.content }}
