Fixed the notes details components to show the correct notes by id

--- a/angular-frontend/src/app/notes-page/notes-detail-page/notes-detail-page.component.html
+++ b/angular-frontend/src/app/notes-page/notes-detail-page/notes-detail-page.component.html
@@ -65,7 +65,7 @@
       </div>
     </div>
 
-    <div *ngIf="note.attachments && note.attachments.length > 0" class="attachments-container">
+    <div *ngIf="note.attachments && note.attachments.length" class="attachments-container">
       <h3 class="attachments-title">Attachments</h3>
       <div class="attachment-grid">
         <div *ngFor="let attachment of note.attachments" class="attachment-item" (click)="openAttachment(attachment)">
