--- a/angular-frontend/src/app/projects-page/new-project-page/new-project-page.component.html
+++ b/angular-frontend/src/app/projects-page/new-project-page/new-project-page.component.html
@@ -1,10 +1,10 @@
 <div class="container">
     <h2>Create New Project</h2>
-    
+
     <form [formGroup]="projectForm" (ngSubmit)="onSubmit()">
       <div class="form-group">
         <label for="projectName">Project Name</label>
-        <input 
+        <input
           id="projectName"
           type="text"
           formControlName="name"
@@ -58,7 +58,7 @@
           <label class="radio-label">
             <input
               type="radio"
-              formControlName="status"
+              formControlName="completionStatus"
               value="ongoing"
             >
             Ongoing
@@ -66,7 +66,7 @@
           <label class="radio-label">
             <input
               type="radio"
-              formControlName="status"
+              formControlName="completionStatus"
               value="completed"
             >
             Completed
